# cellulo-localization

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  decoder.c  decoder.h  grid.c  grid.h  imgproc.c  imgsegment.h  list.c  list.h  list_impl.c  list_impl.h  locationDecoder.pro  locationDecoder.pro.user.ce4ffd6  main.cpp  neighbours.c  neighbours.h
demo/: CMakeLists.txt  demo.pro  main.c
firmware/cellulo.X/: analog.c  analog.h  configuration_bits.c  exceptions.c  gpio.c  gpio.h  i2c.c  i2c.h  interrupts.c  main.c  oscillator.c  oscillator.h  pmp.c  pmp.h  spi.c  spi.h  system.c  system.h  uart.c  uart.h  user.c  user.h
firmware/cellulo.X/nbproject/: configurations.xml  project.xml
include/: cellulo_localization.h  cellulo_localization_global.h
lib/: Makefile  libcellulo_localization.so.1.0.0
mouse/: CMakeLists.txt  vmouse.cpp  vmouse.h
src/: cellulo_localization.pro~  decoder.c  decoder.h  grid.c  grid.h  imgproc.c  imgproc.h  imgsegment.c  intgrid.c  intgrid.h  localization.c  localization.h  neighbours.c  neighbours.h  src.pro
test/: CMakeLists.txt  camera.cpp  camera.h  locationDecoder.pro.user.1e97fa1  main.cpp  test.pro
tools/: generatePattern.py
